tp1/logo/parser.output
   0  $accept : %entry% $end

   1  program : opt_cmd_seq

   2  opt_cmd_seq :
   3              | cmd_seq

   4  cmd_seq : cmd
   5          | cmd_seq cmd

   6  cmd : FORWARD expr
   7      | BACKWARD expr
   8      | RIGHT expr
   9      | LEFT expr
  10      | PRINT expr
  11      | PRINTS
  12      | HOME
  13      | REPEAT expr LEFTC cmd_seq RIGHTC
  14      | IF cond LEFTC cmd_seq RIGHTC
  15      | IFELSE cond LEFTC cmd_seq RIGHTC LEFTC cmd_seq RIGHTC
  16      | MAKE NAME expr

  17  expr : expr2
  18       | expr PLUS expr2
  19       | expr MINUS expr2

  20  expr2 : expr3 POW expr2
  21        | expr3

  22  expr3 : expr3 TIMES expr4
  23        | expr3 MOD expr4
  24        | expr3 DIV expr4
  25        | expr4

  26  expr4 : INT
  27        | REF
  28        | LPAR expr RPAR

  29  cond : expr EQUAL expr
  30       | expr DIFF expr
  31       | expr LESS expr
  32       | expr LESSEQ expr
  33       | expr GREATER expr
  34       | expr GREATEREQ expr

  35  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (35)
	opt_cmd_seq : .  (2)

	FORWARD  shift 3
	BACKWARD  shift 4
	PRINT  shift 5
	RIGHT  shift 6
	LEFT  shift 7
	HOME  shift 8
	MAKE  shift 9
	REPEAT  shift 10
	IF  shift 11
	IFELSE  shift 12
	PRINTS  shift 13
	$end  reduce 2

	program  goto 14
	opt_cmd_seq  goto 15
	cmd_seq  goto 16
	cmd  goto 17


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	cmd : FORWARD . expr  (6)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 21
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 4
	cmd : BACKWARD . expr  (7)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 25
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 5
	cmd : PRINT . expr  (10)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 26
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 6
	cmd : RIGHT . expr  (8)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 27
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 7
	cmd : LEFT . expr  (9)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 28
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 8
	cmd : HOME .  (12)

	.  reduce 12


state 9
	cmd : MAKE . NAME expr  (16)

	NAME  shift 29
	.  error


state 10
	cmd : REPEAT . expr LEFTC cmd_seq RIGHTC  (13)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 30
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 11
	cmd : IF . cond LEFTC cmd_seq RIGHTC  (14)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 31
	cond  goto 32
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 12
	cmd : IFELSE . cond LEFTC cmd_seq RIGHTC LEFTC cmd_seq RIGHTC  (15)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 31
	cond  goto 33
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 13
	cmd : PRINTS .  (11)

	.  reduce 11


state 14
	%entry% : '\001' program .  (35)

	.  reduce 35


state 15
	program : opt_cmd_seq .  (1)

	.  reduce 1


state 16
	opt_cmd_seq : cmd_seq .  (3)
	cmd_seq : cmd_seq . cmd  (5)

	FORWARD  shift 3
	BACKWARD  shift 4
	PRINT  shift 5
	RIGHT  shift 6
	LEFT  shift 7
	HOME  shift 8
	MAKE  shift 9
	REPEAT  shift 10
	IF  shift 11
	IFELSE  shift 12
	PRINTS  shift 13
	$end  reduce 3

	cmd  goto 34


state 17
	cmd_seq : cmd .  (4)

	.  reduce 4


state 18
	expr4 : LPAR . expr RPAR  (28)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 35
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 19
	expr4 : INT .  (26)

	.  reduce 26


state 20
	expr4 : REF .  (27)

	.  reduce 27


state 21
	cmd : FORWARD expr .  (6)
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)

	PLUS  shift 36
	MINUS  shift 37
	$end  reduce 6
	FORWARD  reduce 6
	BACKWARD  reduce 6
	PRINT  reduce 6
	RIGHT  reduce 6
	LEFT  reduce 6
	HOME  reduce 6
	RIGHTC  reduce 6
	MAKE  reduce 6
	REPEAT  reduce 6
	IF  reduce 6
	IFELSE  reduce 6
	PRINTS  reduce 6


state 22
	expr : expr2 .  (17)

	.  reduce 17


state 23
	expr2 : expr3 . POW expr2  (20)
	expr2 : expr3 .  (21)
	expr3 : expr3 . TIMES expr4  (22)
	expr3 : expr3 . MOD expr4  (23)
	expr3 : expr3 . DIV expr4  (24)

	TIMES  shift 38
	MOD  shift 39
	DIV  shift 40
	POW  shift 41
	$end  reduce 21
	FORWARD  reduce 21
	BACKWARD  reduce 21
	PRINT  reduce 21
	RIGHT  reduce 21
	LEFT  reduce 21
	HOME  reduce 21
	RPAR  reduce 21
	LEFTC  reduce 21
	RIGHTC  reduce 21
	EQUAL  reduce 21
	DIFF  reduce 21
	LESS  reduce 21
	LESSEQ  reduce 21
	GREATER  reduce 21
	GREATEREQ  reduce 21
	PLUS  reduce 21
	MINUS  reduce 21
	MAKE  reduce 21
	REPEAT  reduce 21
	IF  reduce 21
	IFELSE  reduce 21
	PRINTS  reduce 21


state 24
	expr3 : expr4 .  (25)

	.  reduce 25


state 25
	cmd : BACKWARD expr .  (7)
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)

	PLUS  shift 36
	MINUS  shift 37
	$end  reduce 7
	FORWARD  reduce 7
	BACKWARD  reduce 7
	PRINT  reduce 7
	RIGHT  reduce 7
	LEFT  reduce 7
	HOME  reduce 7
	RIGHTC  reduce 7
	MAKE  reduce 7
	REPEAT  reduce 7
	IF  reduce 7
	IFELSE  reduce 7
	PRINTS  reduce 7


state 26
	cmd : PRINT expr .  (10)
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)

	PLUS  shift 36
	MINUS  shift 37
	$end  reduce 10
	FORWARD  reduce 10
	BACKWARD  reduce 10
	PRINT  reduce 10
	RIGHT  reduce 10
	LEFT  reduce 10
	HOME  reduce 10
	RIGHTC  reduce 10
	MAKE  reduce 10
	REPEAT  reduce 10
	IF  reduce 10
	IFELSE  reduce 10
	PRINTS  reduce 10


state 27
	cmd : RIGHT expr .  (8)
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)

	PLUS  shift 36
	MINUS  shift 37
	$end  reduce 8
	FORWARD  reduce 8
	BACKWARD  reduce 8
	PRINT  reduce 8
	RIGHT  reduce 8
	LEFT  reduce 8
	HOME  reduce 8
	RIGHTC  reduce 8
	MAKE  reduce 8
	REPEAT  reduce 8
	IF  reduce 8
	IFELSE  reduce 8
	PRINTS  reduce 8


state 28
	cmd : LEFT expr .  (9)
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)

	PLUS  shift 36
	MINUS  shift 37
	$end  reduce 9
	FORWARD  reduce 9
	BACKWARD  reduce 9
	PRINT  reduce 9
	RIGHT  reduce 9
	LEFT  reduce 9
	HOME  reduce 9
	RIGHTC  reduce 9
	MAKE  reduce 9
	REPEAT  reduce 9
	IF  reduce 9
	IFELSE  reduce 9
	PRINTS  reduce 9


state 29
	cmd : MAKE NAME . expr  (16)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 42
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 30
	cmd : REPEAT expr . LEFTC cmd_seq RIGHTC  (13)
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)

	LEFTC  shift 43
	PLUS  shift 36
	MINUS  shift 37
	.  error


state 31
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)
	cond : expr . EQUAL expr  (29)
	cond : expr . DIFF expr  (30)
	cond : expr . LESS expr  (31)
	cond : expr . LESSEQ expr  (32)
	cond : expr . GREATER expr  (33)
	cond : expr . GREATEREQ expr  (34)

	EQUAL  shift 44
	DIFF  shift 45
	LESS  shift 46
	LESSEQ  shift 47
	GREATER  shift 48
	GREATEREQ  shift 49
	PLUS  shift 36
	MINUS  shift 37
	.  error


state 32
	cmd : IF cond . LEFTC cmd_seq RIGHTC  (14)

	LEFTC  shift 50
	.  error


state 33
	cmd : IFELSE cond . LEFTC cmd_seq RIGHTC LEFTC cmd_seq RIGHTC  (15)

	LEFTC  shift 51
	.  error


state 34
	cmd_seq : cmd_seq cmd .  (5)

	.  reduce 5


state 35
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)
	expr4 : LPAR expr . RPAR  (28)

	RPAR  shift 52
	PLUS  shift 36
	MINUS  shift 37
	.  error


state 36
	expr : expr PLUS . expr2  (18)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr2  goto 53
	expr3  goto 23
	expr4  goto 24


state 37
	expr : expr MINUS . expr2  (19)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr2  goto 54
	expr3  goto 23
	expr4  goto 24


state 38
	expr3 : expr3 TIMES . expr4  (22)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr4  goto 55


state 39
	expr3 : expr3 MOD . expr4  (23)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr4  goto 56


state 40
	expr3 : expr3 DIV . expr4  (24)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr4  goto 57


state 41
	expr2 : expr3 POW . expr2  (20)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr2  goto 58
	expr3  goto 23
	expr4  goto 24


state 42
	cmd : MAKE NAME expr .  (16)
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)

	PLUS  shift 36
	MINUS  shift 37
	$end  reduce 16
	FORWARD  reduce 16
	BACKWARD  reduce 16
	PRINT  reduce 16
	RIGHT  reduce 16
	LEFT  reduce 16
	HOME  reduce 16
	RIGHTC  reduce 16
	MAKE  reduce 16
	REPEAT  reduce 16
	IF  reduce 16
	IFELSE  reduce 16
	PRINTS  reduce 16


state 43
	cmd : REPEAT expr LEFTC . cmd_seq RIGHTC  (13)

	FORWARD  shift 3
	BACKWARD  shift 4
	PRINT  shift 5
	RIGHT  shift 6
	LEFT  shift 7
	HOME  shift 8
	MAKE  shift 9
	REPEAT  shift 10
	IF  shift 11
	IFELSE  shift 12
	PRINTS  shift 13
	.  error

	cmd_seq  goto 59
	cmd  goto 17


state 44
	cond : expr EQUAL . expr  (29)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 60
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 45
	cond : expr DIFF . expr  (30)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 61
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 46
	cond : expr LESS . expr  (31)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 62
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 47
	cond : expr LESSEQ . expr  (32)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 63
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 48
	cond : expr GREATER . expr  (33)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 64
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 49
	cond : expr GREATEREQ . expr  (34)

	LPAR  shift 18
	INT  shift 19
	REF  shift 20
	.  error

	expr  goto 65
	expr2  goto 22
	expr3  goto 23
	expr4  goto 24


state 50
	cmd : IF cond LEFTC . cmd_seq RIGHTC  (14)

	FORWARD  shift 3
	BACKWARD  shift 4
	PRINT  shift 5
	RIGHT  shift 6
	LEFT  shift 7
	HOME  shift 8
	MAKE  shift 9
	REPEAT  shift 10
	IF  shift 11
	IFELSE  shift 12
	PRINTS  shift 13
	.  error

	cmd_seq  goto 66
	cmd  goto 17


state 51
	cmd : IFELSE cond LEFTC . cmd_seq RIGHTC LEFTC cmd_seq RIGHTC  (15)

	FORWARD  shift 3
	BACKWARD  shift 4
	PRINT  shift 5
	RIGHT  shift 6
	LEFT  shift 7
	HOME  shift 8
	MAKE  shift 9
	REPEAT  shift 10
	IF  shift 11
	IFELSE  shift 12
	PRINTS  shift 13
	.  error

	cmd_seq  goto 67
	cmd  goto 17


state 52
	expr4 : LPAR expr RPAR .  (28)

	.  reduce 28


state 53
	expr : expr PLUS expr2 .  (18)

	.  reduce 18


state 54
	expr : expr MINUS expr2 .  (19)

	.  reduce 19


state 55
	expr3 : expr3 TIMES expr4 .  (22)

	.  reduce 22


state 56
	expr3 : expr3 MOD expr4 .  (23)

	.  reduce 23


state 57
	expr3 : expr3 DIV expr4 .  (24)

	.  reduce 24


state 58
	expr2 : expr3 POW expr2 .  (20)

	.  reduce 20


state 59
	cmd_seq : cmd_seq . cmd  (5)
	cmd : REPEAT expr LEFTC cmd_seq . RIGHTC  (13)

	FORWARD  shift 3
	BACKWARD  shift 4
	PRINT  shift 5
	RIGHT  shift 6
	LEFT  shift 7
	HOME  shift 8
	RIGHTC  shift 68
	MAKE  shift 9
	REPEAT  shift 10
	IF  shift 11
	IFELSE  shift 12
	PRINTS  shift 13
	.  error

	cmd  goto 34


state 60
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)
	cond : expr EQUAL expr .  (29)

	PLUS  shift 36
	MINUS  shift 37
	LEFTC  reduce 29


state 61
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)
	cond : expr DIFF expr .  (30)

	PLUS  shift 36
	MINUS  shift 37
	LEFTC  reduce 30


state 62
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)
	cond : expr LESS expr .  (31)

	PLUS  shift 36
	MINUS  shift 37
	LEFTC  reduce 31


state 63
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)
	cond : expr LESSEQ expr .  (32)

	PLUS  shift 36
	MINUS  shift 37
	LEFTC  reduce 32


state 64
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)
	cond : expr GREATER expr .  (33)

	PLUS  shift 36
	MINUS  shift 37
	LEFTC  reduce 33


state 65
	expr : expr . PLUS expr2  (18)
	expr : expr . MINUS expr2  (19)
	cond : expr GREATEREQ expr .  (34)

	PLUS  shift 36
	MINUS  shift 37
	LEFTC  reduce 34


state 66
	cmd_seq : cmd_seq . cmd  (5)
	cmd : IF cond LEFTC cmd_seq . RIGHTC  (14)

	FORWARD  shift 3
	BACKWARD  shift 4
	PRINT  shift 5
	RIGHT  shift 6
	LEFT  shift 7
	HOME  shift 8
	RIGHTC  shift 69
	MAKE  shift 9
	REPEAT  shift 10
	IF  shift 11
	IFELSE  shift 12
	PRINTS  shift 13
	.  error

	cmd  goto 34


state 67
	cmd_seq : cmd_seq . cmd  (5)
	cmd : IFELSE cond LEFTC cmd_seq . RIGHTC LEFTC cmd_seq RIGHTC  (15)

	FORWARD  shift 3
	BACKWARD  shift 4
	PRINT  shift 5
	RIGHT  shift 6
	LEFT  shift 7
	HOME  shift 8
	RIGHTC  shift 70
	MAKE  shift 9
	REPEAT  shift 10
	IF  shift 11
	IFELSE  shift 12
	PRINTS  shift 13
	.  error

	cmd  goto 34


state 68
	cmd : REPEAT expr LEFTC cmd_seq RIGHTC .  (13)

	.  reduce 13


state 69
	cmd : IF cond LEFTC cmd_seq RIGHTC .  (14)

	.  reduce 14


state 70
	cmd : IFELSE cond LEFTC cmd_seq RIGHTC . LEFTC cmd_seq RIGHTC  (15)

	LEFTC  shift 71
	.  error


state 71
	cmd : IFELSE cond LEFTC cmd_seq RIGHTC LEFTC . cmd_seq RIGHTC  (15)

	FORWARD  shift 3
	BACKWARD  shift 4
	PRINT  shift 5
	RIGHT  shift 6
	LEFT  shift 7
	HOME  shift 8
	MAKE  shift 9
	REPEAT  shift 10
	IF  shift 11
	IFELSE  shift 12
	PRINTS  shift 13
	.  error

	cmd_seq  goto 72
	cmd  goto 17


state 72
	cmd_seq : cmd_seq . cmd  (5)
	cmd : IFELSE cond LEFTC cmd_seq RIGHTC LEFTC cmd_seq . RIGHTC  (15)

	FORWARD  shift 3
	BACKWARD  shift 4
	PRINT  shift 5
	RIGHT  shift 6
	LEFT  shift 7
	HOME  shift 8
	RIGHTC  shift 73
	MAKE  shift 9
	REPEAT  shift 10
	IF  shift 11
	IFELSE  shift 12
	PRINTS  shift 13
	.  error

	cmd  goto 34


state 73
	cmd : IFELSE cond LEFTC cmd_seq RIGHTC LEFTC cmd_seq RIGHTC .  (15)

	.  reduce 15


34 terminals, 11 nonterminals
36 grammar rules, 74 states
